<resources>
    <string name="app_name" translatable="false">Ligretto Score</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_game_params">Game parameters</string>
    <string name="activity_scoreboard">Scoreboard - %1$s</string>
    <string name="activity_round">New round - %1$s</string>

    <!-- Settings Titles -->
    <string name="game_header">Game mode settings</string>
    <string name="display_header">Display</string>
    <string name="about_header">About</string>
    <string name="licenses_credits_header">Licenses &amp; Credits</string>

    <!-- Settings keys -->
    <string name="settings_key_theme_9" translatable="false">theme_9</string>
    <string name="settings_key_theme_10" translatable="false">theme_10</string>
    <string name="settings_key_round_view" translatable="false">round_view</string>
    <string name="settings_key_game_points" translatable="false">game_points</string>
    <string name="settings_key_turns" translatable="false">turns</string>
    <string name="settings_key_see_github" translatable="false">github</string>
    <string name="settings_key_developer" translatable="false">developer</string>
    <string name="settings_key_license_colorpicker" translatable="false">license_colorpicker</string>

    <!-- Extras -->
    <string name="extra_game" translatable="false">GAME</string>
    <string name="extra_players" translatable="false">PLAYERS</string>
    <string name="extra_index_input" translatable="false">INPUT_INDEX</string>

    <!-- Display Settings -->
    <string name="theme_title">Theme</string>
    <string name="theme_dialog_title">Choose theme</string>
    <string name="round_view_title">New round view</string>
    <string name="round_view_dialog_title">Choose the round view</string>

    <!-- Game Settings -->
    <string name="game_points_title">Points needed to win the game</string>
    <string name="game_turns_title">Number of turns</string>

    <!-- About Settings -->
    <string name="see_github_title">See the project on GitHub</string>
    <string name="developer_title">Developed by Lucas Bürgy</string>
    <string name="developer_description">Licensed under the GNU GPL v3.0 license</string>

    <!-- Licenses & Credits Settings -->
    <string name="license_colorpicker_title" translatable="false">ColorPicker</string>
    <string name="license_colorpicker_description">by Petrov Kristiyan, licensed under the Apache 2.0 license</string>

    <!-- Menus -->
    <string name="infos">Informations</string>
    <string name="done">Done</string>
    <string name="next_round">Next round</string>
    <string name="next_input">Next input</string>

    <!-- Main -->
    <string name="nb_players">%1$d players</string>
    <string name="game_name">Game name</string>
    <string name="player_name">Player name</string>

    <!-- Dialog -->
    <string name="dialog_title_delete_game">Delete a game</string>
    <string name="dialog_delete_game">Do you really want to delete \"%1$s\" ?</string>
    <string name="dialog_title_player_won">%1$s has won !</string>
    <string name="dialog_title_infos">Informations</string>
    <string name="dialog_infos">\"%1$s\" are the cards that are in the Ligretto stack, the stack of 10 cards (without the 3 additionnal).\n\n\"%2$s\" are the cards that you have played, those in the center of the table.</string>
    <string name="dialog_title_quit_round">Quit</string>
    <string name="dialog_quit_round">Are you sure you want to quit this screen ? All your changes will be lost.</string>
    <string name="dialog_title_quit_game_params">Quit</string>
    <string name="dialog_quit_game_params">Are you sure you want to quit this screen ? All your changes will be lost.</string>
    <string name="dialog_title_color_picker">Choose the color</string>
    <string name="dialog_point_mode">Point mode</string>
    <string name="dialog_turn_mode">Turn mode</string>

    <!-- Game params -->
    <string name="add_player_dialog_title">Add a player</string>
    <string name="game_mode_dialog_title">Choose a game mode</string>
    <string name="title_players">Players :</string>
    <string name="title_game">Game :</string>

    <!-- Round -->
    <string name="cards_center">Cards in the center</string>
    <string name="cards_ligretto">Cards in the Ligretto</string>

    <!-- Errors -->
    <string name="error_game_name">You have to set a game name</string>
    <string name="error_not_enough_players">You need to be at least two players to start a game</string>
    <string name="error_max_players">You can have maximum %1$d players</string>
    <string name="error_enter_all_fields">You have to fill all the fields</string>
    <string name="error_enter_too_much_ligretto">You have too much cards in Ligretto field</string>
    <string name="error_enter_not_enough_ligretto">You have not enough cards in Ligretto field</string>
    <string name="error_enter_not_enough_cardsCenter">You have not enough cards in Center field</string>
    <string name="error_enter_too_much_cardsCenter">You have too much cards in Center field</string>
    <string name="error_no_player_dont_have_cards_in_ligretto">Nobody don\'t have cards in Ligretto field</string>
    <string name="error_too_many_players_dont_have_cards_in_ligretto">Too many players don\'t have cards in Ligretto field</string>

    <!-- Defaults -->
    <string name="default_game_name">Game %1$d</string>
    <string name="see_github">See the project on GitHub</string>

    <!-- Game mode -->
    <string name="game_mode_header">Game mode</string>
    <string name="title_points_mode">Points mode</string>
    <string name="title_round_mode">Turns mode</string>

    <!-- Toasts -->
    <string name="toast_turn">Turn</string>
</resources>