<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ch.lburgy.ligrettoscore.activities.MainActivity">

    <item
        android:id="@+id/action_infos"
        android:icon="@drawable/ic_info_home"
        android:orderInCategory="50"
        android:title="@string/infos"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_next"
        android:icon="@drawable/ic_next"
        android:orderInCategory="80"
        android:title="@string/next_input"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_done"
        android:icon="@drawable/ic_done"
        android:orderInCategory="100"
        android:title="@string/done"
        android:visible="false"
        app:showAsAction="always" />
</menu>