<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/screen_horizontal_margin"
    android:paddingTop="@dimen/screen_vertical_margin"
    android:paddingEnd="@dimen/screen_horizontal_margin"
    android:paddingBottom="@dimen/screen_vertical_margin">

    <TextView
        android:id="@+id/txt_title_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_game"
        android:textSize="@dimen/h1" />

    <LinearLayout
        android:id="@+id/game_params"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_horizontal_margin"
        android:layout_marginTop="@dimen/screen_vertical_margin"
        android:layout_marginEnd="@dimen/screen_horizontal_margin"
        android:layout_marginBottom="@dimen/screen_vertical_margin"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txt_game_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/game_name"
            android:inputType="text"
            android:textSize="@dimen/h3" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_title_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_players"
        android:textSize="@dimen/h1" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_horizontal_margin"
        android:layout_marginTop="@dimen/screen_vertical_margin"
        android:layout_marginEnd="@dimen/screen_horizontal_margin"
        android:layout_marginBottom="@dimen/screen_vertical_margin" />

</LinearLayout>